3/29/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add bug fix note.

3/14/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add release note.

3/07/2006 Bob Rossi <bob@brasko.net>
    
	* configure.in (AC_INIT): Version update for CVS.
	* configure: Autogenerated.

version 0.6.1 (03/06/2006):

3/06/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add release data.

3/06/2006 Bob Rossi <bob@brasko.net>

	* release-todo: Fix typo.

3/06/2006 Bob Rossi <bob@brasko.net>
    
	* configure.in (AC_INIT): Version update.
	* configure: Autogenerated.

3/06/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update for .6.1 release.

3/06/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion.
	* RELEASE_TODO: Fixed last bug I know of for .6.2.

3/05/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finished tab completion feature request.

3/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion (quoting lines).

3/05/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note for tab completion.

3/01/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Another minor bug for .6.1

2/27/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Update for .6.1

2/26/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Moved task to .6.2

2/25/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finish another task.

2/25/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add another release problem.

2/25/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Document new highlight command.
	* NEWS: Add note about manual.

2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Reorganize for .6.1

2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add some tasks.
	
2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Finished a problem.

2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Remove 2 not needed tasks.
	
2/24/2006 Bob Rossi <bob@brasko.net>

	* RELEASE_TODO: Add several new tasks to do.

2/23/2006 Bob Rossi <bob@brasko.net>
