@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.35.
-.TH CGDB "1" "March 2006" "CGDB 0.6.1-cvs
+.TH CGDB "1" "April 2006" "CGDB 0.6.1-cvs
 " "User Commands"
 .SH NAME
 CGDB \- manual page for CGDB 0.6.1-cvs
