@@ -1,3 +1,7 @@
+4/04/2006 Bob Rossi <bob@brasko.net>
+
+	* cgdb.1: Autogenerated.
+
 3/07/2006 Bob Rossi <bob@brasko.net>
 
 	* cgdb.1: Autogenerated.
