@@ -1,3 +1,11 @@
+4/04/2006 Bob Rossi <bob@brasko.net>
+
+	* NEWS: Add comment.
+	* configure: Autogenerated.
+	* conifgure.in: Remove comments.
+	* config/readline.m4: Remove termcap possibility.
+	* config/readline_check_version.m4: Ditto.
+
 3/29/2006 Bob Rossi <bob@brasko.net>
 
 	* NEWS: Add bug fix note.
